--- a/nut/static/css/web/guoku_front.less
+++ b/nut/static/css/web/guoku_front.less
@@ -209,6 +209,12 @@ body{
           border-right:none;
           padding-right:0;
         }
+        &.no-padding-left{
+          padding-left: 0px;
+        }
+        &:first-child{
+          padding-right: 0px;
+        }
       }
     }
     .qr-wrapper{
