--- a/nut/static/css/web/style.less
+++ b/nut/static/css/web/style.less
@@ -137,8 +137,8 @@ a:hover{text-decoration:none;}
     line-height: 1.5;
   }
 }
-.edit_profile{margin-top: 110px;height: 800px;}
-.change_password,.binding_page,.notice_page{margin-top: 110px;height: 600px;}
+.edit_profile{margin-top: 110px;}
+.change_password,.binding_page,.notice_page{margin-top: 110px;}
 .slide a{color: #414243;}
 .slide a:hover{color: #414243;}
 .slide ul li{height: 48px; border-bottom: 1px dashed #E6E6E6;line-height: 48px;text-align: left;}
